# affiners

./: Cargo.toml  README.md  bench_compare.py  bench_vs_interp_simd.py  bench_vs_interp_simd_f16.py  benchmark_comparison.py  benchmark_results.json  benchmark_results_baseline.json  build.rs  compare_outputs.py  pyproject.toml  test_correctness.py
.github/workflows/: ci.yml  release.yaml  release.yml
benches/: interpolation.rs
examples/: bench_avx_compare.rs  bench_large.rs  compare_with_c.rs  full_comparison.rs
python/affiners/: __init__.py
python/interp3d_avx2/: __init__.py
src/: lib.rs  python.rs  scalar.rs  warp.rs
src/simd/: avx2.rs  avx512.rs  mod.rs
test_data/: matrix.txt  metadata.txt
tests/: correctness.rs  test_correctness.py
