[package]
name = "interp3d-avx2"
version = "0.1.0"
edition = "2021"
authors = ["Ilan Theodoro"]
description = "Fast 3D trilinear interpolation using AVX2 SIMD instructions"
license = "BSD-3-Clause"
keywords = ["interpolation", "simd", "avx2", "3d", "image-processing"]

[lib]
name = "interp3d_avx2"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16"
rayon = "1.10"
half = "2.4"
numpy = { version = "0.24", optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
rand = "0.8"
approx = "0.5"

[features]
default = ["parallel"]
parallel = []
python = ["pyo3", "numpy"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
